adding read time

--- a/styles/article.css
+++ b/styles/article.css
@@ -21,6 +21,6 @@ article p {
 
 ul,
 ol {
-   @apply .list-outside .mb-8;
-   list-style: initial;
+   @apply .list-inside .mb-8;
+   list-style: inside;
 }
