--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -8,8 +8,8 @@
    top: 0;
    left: 0;
    width: 100%;
-   height: 5px;
-   @apply .bg-highlight-cyan;
+   height: 3px;
+   background: var(--accent);
 }
 
 #nprogress::after {
@@ -18,6 +18,6 @@
    top: 0;
    left: 0;
    width: 100%;
-   height: 5px;
+   height: 3px;
    background: transparent;
 }
