--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,7 @@
    }
 } */
 
+@import './colors.css';
 @import './inter.css';
 @import './syntax-zeit.css';
 @import './markdown.css';
@@ -16,163 +17,120 @@ html {
 }
 
 h1 {
-   @apply .font-medium .tracking-tight .leading-none;
-   font-size: 5rem;
+   @apply text-4xl font-medium tracking-tight leading-none;
 }
 h2 {
-   @apply text-3xl .font-semibold .tracking-normal .leading-normal;
+   @apply text-3xl font-semibold tracking-normal leading-normal;
 }
 h3 {
-   @apply .text-2xl .font-semibold .tracking-normal .leading-normal;
+   @apply text-2xl font-semibold tracking-normal leading-normal;
 }
 h4 {
-   @apply .text-lg .font-light .tracking-normal .leading-normal;
+   @apply text-lg font-light tracking-normal leading-normal;
 }
 
 p,
 li {
-   @apply .text-xl .font-light .tracking-normal .leading-loose;
+   @apply text-xl font-light tracking-normal leading-loose;
 }
 
 /* Link preflight */
 a:hover {
-   @apply .bg-highlight-cyan .text-black .no-underline;
-   background-image: none;
+   color: var(--link);
+   background: var(--accent);
+   /* transition: background-size 0.3s; */
+   background-size: 4px 100%;
 }
 
 a {
-   background-image: linear-gradient(gray, gray);
-   background-size: 100% 1px;
-   background-position: left bottom;
-   background-repeat: no-repeat;
-}
-
-:root {
-   --header-bg-dark: rgba(17, 17, 17, 0.8);
-   --header-bg-light: rgba(250, 250, 250, 0.8);
-   --selection-on-dark: hsla(0, 0%, 100%, 0.99);
-   --selection-on-light: hsla(0, 0%, 0%, 0.99);
+   background: linear-gradient(
+      to bottom,
+      var(--medium-emphasize) 0%,
+      var(--medium-emphasize) 100%
+   );
+   background-position: 0 100%;
+   background-repeat: repeat-x;
+   background-size: 4px 1px;
+   text-decoration: none;
+   /* transition: background-size 0.3s; */
+   text-decoration: none;
 }
 
 @tailwind components;
 @tailwind utilities;
 
 /* Global style */
-button:focus {
-   @apply .bg-accent-2 .border-none .outline-none .text-black;
-}
-
-/* Dark mode style */
-body.dark-mode {
-   @apply .bg-accent-8;
-   color: theme('colors.white');
+body {
+   background: var(--bg);
+   color: var(--fg);
    /* transition: background-color 0.3s ease; */
-
-   & h1,
-   h2 {
-      color: theme('colors.white');
-   }
-
-   & blockquote {
-      @apply .m-0 .border-white .italic .border-l-2 .pl-4;
-   }
-
-   & ::selection {
-      text-shadow: none;
-      color: theme('colors.black');
-      background-color: var(--selection-on-dark);
-   }
-
-   & button:hover,
-   button:focus {
-      @apply .bg-accent-7;
-   }
-
-   & time {
-      @apply .text-accent-3;
-   }
-   & .reading-time {
-      @apply .text-highlight-cyan;
-   }
-
-   & footer {
-      @apply .border-gray-800 transition-colors duration-300;
-
-      & a {
-         background-image: none;
-      }
-   }
-
-   & nav {
-      /* @apply .bg-accent-8; */
-      /* transition: background-color 0.3s ease; */
-      background-color: var(--header-bg-dark);
-      backdrop-filter: saturate(180%) blur(20px);
-
-      & a {
-         @apply .no-underline;
-         background-image: none;
-      }
-
-      & a:hover {
-         @apply .text-black;
-      }
-   }
-
-   & svg {
-      @apply .stroke-light;
-   }
-}
-
-/* Light mode style */
-body.light-mode {
-   @apply .bg-accent-1;
-   color: theme('colors.black');
-   /* transition: background-color 0.3s ease; */
-
-   & blockquote {
-      @apply .m-0 .border-black .italic .border-l-2 .pl-4 .transition-all .duration-300;
-   }
-
-   & ::selection {
-      text-shadow: none;
-      color: theme('colors.white');
-      background-color: var(--selection-on-light);
-   }
-
-   & .reading-time {
-      @apply .text-black .bg-highlight-cyan;
-   }
-
-   & svg {
-      @apply .stroke-dark;
-   }
-
-   & time {
-      @apply .text-accent-3;
-   }
-
-   & footer {
-      @apply .border-gray-200 transition-colors duration-300;
-      & a {
-         background-image: none;
-      }
-   }
-
-   & nav {
-      /* @apply .bg-accent-1; */
-      /* transition: background-color 0.3s ease; */
-      background-color: var(--header-bg-light);
-      backdrop-filter: saturate(180%) blur(20px);
-
-      & a {
-         @apply .no-underline;
-         background-image: none;
-      }
-   }
 }
 
 img {
    max-width: 100%;
    display: block;
+}
+
+button:focus {
+   @apply .bg-shade .border-none .outline-none .text-fg;
+}
+
+blockquote {
+   @apply .m-0 .border-fg .border-l-2 .pl-4;
+   transition: border-width 0.3s ease-in-out;
+}
+
+blockquote:hover {
+   @apply .border-accent border-l-8 cursor-pointer select-all;
+   transition: border-width 0.3s ease-in-out;
+}
+
+svg {
+   @apply .stroke-fg;
+}
+
+h1,
+h2,
+h3 {
+   @apply text-most-emphasize;
+}
+
+p {
+   @apply text-higher-emphasize;
+}
+
+button:hover,
+button:focus {
+   @apply .bg-shade;
+}
+
+::selection {
+   text-shadow: none;
+   color: var(--bg);
+   background-color: var(--selection);
+}
+
+nav {
+   background-color: var(--bg-header);
+   backdrop-filter: saturate(180%) blur(5px);
+
+   & a {
+      background-image: none;
+   }
+
+   & a:hover {
+      color: var(--link);
+   }
+}
+
+footer {
+   @apply .border-outline transition-colors duration-300;
+   & a {
+      background-image: none;
+   }
+
+   & a:hover {
+      color: var(--fg);
+      background: none;
+   }
 }
