--- a/styles/global.css
+++ b/styles/global.css
@@ -6,14 +6,16 @@
    }
 } */
 
+/* @import './inter.css'; */
 @import './colors.css';
-@import './inter.css';
 @import './syntax-zeit.css';
 @import './markdown.css';
 @import './nprogress.css';
 
 html {
-   font-family: 'Inter', sans-serif;
+   /* font-family: 'Inter', sans-serif; */
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 h1 {
@@ -31,7 +33,7 @@ h4 {
 
 p,
 li {
-   @apply text-xl font-light tracking-normal leading-loose;
+   @apply text-lg font-light tracking-normal leading-relaxed;
 }
 
 /* Link preflight */
