--- a/styles/colors.css
+++ b/styles/colors.css
@@ -6,14 +6,15 @@
    --warning: #f5a623;
    --success: #0070f3;
    --error: #e00;
-   --link: #111;
+   --link: #fafafa;
+   --overlay: rgba(17, 17, 17, 0.315);
 }
 
 .dark-mode {
    --bg: #111;
    --fg: #fafafa;
    --bg-header: rgba(17, 17, 17, 0.8);
-   --accent: var(--cyan);
+   --accent: var(--magenta);
    --selection: hsla(0, 0%, 100%, 0.99);
 
    --shade: #333;
@@ -29,7 +30,7 @@
    --bg: #fafafa;
    --fg: #111;
    --bg-header: rgba(250, 250, 250, 0.8);
-   --accent: var(--cyan);
+   --accent: var(--success);
    --selection: hsla(0, 0%, 0%, 0.99);
 
    --shade: #eaeaea;
