--- a/styles/global.css
+++ b/styles/global.css
@@ -14,12 +14,12 @@
 
 html {
    /* font-family: 'Inter', sans-serif; */
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; */
 }
 
 h1 {
-   @apply text-4xl font-medium tracking-tight leading-none;
+   @apply text-4xl font-semibold tracking-tight leading-none;
 }
 h2 {
    @apply text-3xl font-semibold tracking-normal leading-normal;
@@ -28,34 +28,23 @@ h3 {
    @apply text-2xl font-semibold tracking-normal leading-normal;
 }
 h4 {
-   @apply text-lg font-light tracking-normal leading-normal;
+   @apply text-base font-light tracking-normal leading-normal;
 }
 
 p,
 li {
-   @apply text-lg font-light tracking-normal leading-relaxed;
+   @apply text-lg font-light tracking-normal leading-loose;
 }
 
 /* Link preflight */
 a:hover {
    color: var(--link);
    background: var(--accent);
-   /* transition: background-size 0.3s; */
    background-size: 4px 100%;
 }
 
 a {
-   background: linear-gradient(
-      to bottom,
-      var(--medium-emphasize) 0%,
-      var(--medium-emphasize) 100%
-   );
-   background-position: 0 100%;
-   background-repeat: repeat-x;
-   background-size: 4px 1px;
-   text-decoration: none;
-   /* transition: background-size 0.3s; */
-   text-decoration: none;
+   @apply text-accent;
 }
 
 @tailwind components;
@@ -79,11 +68,6 @@ button:focus {
 
 blockquote {
    @apply .m-0 .border-fg .border-l-2 .pl-4;
-   transition: border-width 0.3s ease-in-out;
-}
-
-blockquote:hover {
-   @apply .border-accent border-l-8 cursor-pointer select-all;
    transition: border-width 0.3s ease-in-out;
 }
 
@@ -114,7 +98,7 @@ button:focus {
 
 nav {
    background-color: var(--bg-header);
-   backdrop-filter: saturate(180%) blur(5px);
+   backdrop-filter: saturate(180%) blur(16px);
 
    & a {
       background-image: none;
@@ -126,7 +110,7 @@ nav {
 }
 
 footer {
-   @apply .border-outline transition-colors duration-300;
+   @apply .border-shade;
    & a {
       background-image: none;
    }
