--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -5,11 +5,12 @@ pre {
    white-space: -pre-wrap; /* Opera 4-6 */
    white-space: -o-pre-wrap; /* Opera 7 */
    word-wrap: break-word; /* Internet Explorer 5.5+ */
-   -webkit-user-select: all; /* Chrome 49+ */
-   -moz-user-select: all; /* Firefox 43+ */
-   -ms-user-select: all; /* No support yet */
-   user-select: all;
 }
+
+/* -webkit-user-select: all;
+-moz-user-select: all;
+-ms-user-select: all;
+user-select: all; */
 
 article p {
    @apply .mb-8 .break-words;
@@ -18,10 +19,6 @@ article p {
 article h2,
 article h3 {
    @apply .mb-4 .pt-8;
-}
-
-article h4 {
-   @apply pt-4;
 }
 
 article pre {
