--- a/styles/syntax-zeit.css
+++ b/styles/syntax-zeit.css
@@ -47,7 +47,7 @@ pre[class*='language-'] {
    padding: 1em;
    margin: 0.5em 0;
    overflow: auto;
-   background: #fafafa;
+   /* background: #fafafa; */
 }
 :not(pre) > code[class*='language-'] {
    padding: 0.1em 0.3em;
