--- a/styles/syntax-zeit.css
+++ b/styles/syntax-zeit.css
@@ -44,10 +44,9 @@ code[class*='language-']::mozselection {
       text-shadow: none;
    }
 }
-pre[class*='language-'] {
-   @apply p-4;
-   overflow: auto;
-}
+/* pre[class*='language-'] {
+   
+} */
 :not(pre) > code[class*='language-'] {
    padding: 0.1em 0.3em;
    border-radius: 0.3em;
