--- a/styles/syntax-zeit.css
+++ b/styles/syntax-zeit.css
@@ -12,7 +12,8 @@
 */
 pre[class*='language-'],
 code[class*='language-'] {
-   font-size: 13px;
+   @apply leading-relaxed;
+   font-size: 12px;
    text-shadow: none;
    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
       Bitstream Vera Sans Mono, Courier New, monospace, serif;
@@ -22,7 +23,7 @@ code[class*='language-'] {
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
-   line-height: 1.6;
+   /* line-height: 1.2 !important; */
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
@@ -96,7 +97,7 @@ code[class*='language-']::mozselection {
 .token.attr-value,
 .token.keyword {
    color: var(--token-keyword);
-   @apply font-bold;
+   @apply font-medium;
 }
 .token.function {
    color: var(--token-function);
