--- a/styles/syntax-zeit.css
+++ b/styles/syntax-zeit.css
@@ -12,7 +12,6 @@
 */
 pre[class*='language-'],
 code[class*='language-'] {
-   @apply leading-relaxed;
    font-size: 12px;
    text-shadow: none;
    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -23,7 +22,7 @@ code[class*='language-'] {
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
-   /* line-height: 1.2 !important; */
+   line-height: 1 !important;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
